garde_tests/tests/ui/compile-fail/unknown_rule.stderr
error: unrecognized validation rule
 --> tests/ui/compile-fail/unknown_rule.rs:3:20
  |
3 |     #[garde(ascii, unknown_rule)]
  |                    ^^^^^^^^^^^^
